[gd_scene load_steps=19 format=2]

[ext_resource path="res://players/player1.png" type="Texture" id=1]
[ext_resource path="res://players/player3.png" type="Texture" id=2]
[ext_resource path="res://players/player2.png" type="Texture" id=3]
[ext_resource path="res://players/player5.png" type="Texture" id=4]
[ext_resource path="res://players/player4.png" type="Texture" id=5]
[ext_resource path="res://players/player6.png" type="Texture" id=6]
[ext_resource path="res://Scripts/skin_selection_script.gd" type="Script" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/Minecraft.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="Animation" id=4]
resource_name = "HoverP1"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1.2 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 0.6 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6, 6 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "HoverP2"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1.2 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 0.6 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6, 6 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "HoverP3"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1.2 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 0.6 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6, 6 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "HoverP4"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1.2 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 0.6 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6, 6 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "HoverP5"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1.2 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 0.6 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6, 6 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "HoverP6"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1.2 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 0.6 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 6, 6 ) ]
}

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/font/Minecraft.ttf"

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = SubResource( 10 )

[node name="Skin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer4"]
margin_right = 1280.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer4"]
margin_top = 43.0
margin_right = 1280.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 2 )
text = "CHOOSE YOUR PLAYER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer4"]
margin_right = 1280.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Area2D" parent="MarginContainer4"]
position = Vector2( 423.942, 274.665 )
rotation = -0.000354654
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer4/Player1"]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer4/Player1"]
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer4/Player1"]
anims/HoverP1 = SubResource( 4 )

[node name="Player2" type="Area2D" parent="MarginContainer4"]
position = Vector2( 617.859, 274.665 )
rotation = -0.000354654
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer4/Player2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer4/Player2"]
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="MarginContainer4/Player2"]
anims/HoverP2 = SubResource( 5 )

[node name="Player3" type="Area2D" parent="MarginContainer4"]
position = Vector2( 804.032, 274.665 )
rotation = -0.000354654
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer4/Player3"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer4/Player3"]
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="MarginContainer4/Player3"]
anims/HoverP3 = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer4"]
margin_right = 1280.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4" type="Area2D" parent="MarginContainer4"]
position = Vector2( 423.942, 500.268 )
rotation = -0.000354654
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer4/Player4"]
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer4/Player4"]
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="AnimationPlayer4" type="AnimationPlayer" parent="MarginContainer4/Player4"]
anims/HoverP4 = SubResource( 7 )

[node name="Player5" type="Area2D" parent="MarginContainer4"]
position = Vector2( 617.859, 500.268 )
rotation = -0.000354654
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer4/Player5"]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer4/Player5"]
visible = false
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="AnimationPlayer5" type="AnimationPlayer" parent="MarginContainer4/Player5"]
anims/HoverP5 = SubResource( 8 )

[node name="Player6" type="Area2D" parent="MarginContainer4"]
position = Vector2( 804.032, 500.268 )
rotation = -0.000354654
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer4/Player6"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer4/Player6"]
visible = false
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="AnimationPlayer6" type="AnimationPlayer" parent="MarginContainer4/Player6"]
anims/HoverP6 = SubResource( 9 )

[node name="Back" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 248.0
margin_right = 200.0
margin_bottom = 286.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.396078, 0.643137, 1 )
custom_colors/font_color_pressed = Color( 0.447059, 0.623529, 0.811765, 1 )
text = "< Go back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="MarginContainer4/Player1" to="." method="_on_Player1_input_event"]
[connection signal="mouse_entered" from="MarginContainer4/Player1" to="." method="_on_Player1_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer4/Player1" to="." method="_on_Player1_mouse_exited"]
[connection signal="input_event" from="MarginContainer4/Player2" to="." method="_on_Player2_input_event"]
[connection signal="mouse_entered" from="MarginContainer4/Player2" to="." method="_on_Player2_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer4/Player2" to="." method="_on_Player2_mouse_exited"]
[connection signal="input_event" from="MarginContainer4/Player3" to="." method="_on_Player3_input_event"]
[connection signal="mouse_entered" from="MarginContainer4/Player3" to="." method="_on_Player3_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer4/Player3" to="." method="_on_Player3_mouse_exited"]
[connection signal="input_event" from="MarginContainer4/Player4" to="." method="_on_Player4_input_event"]
[connection signal="mouse_entered" from="MarginContainer4/Player4" to="." method="_on_Player4_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer4/Player4" to="." method="_on_Player4_mouse_exited"]
[connection signal="input_event" from="MarginContainer4/Player5" to="." method="_on_Player5_input_event"]
[connection signal="mouse_entered" from="MarginContainer4/Player5" to="." method="_on_Player5_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer4/Player5" to="." method="_on_Player5_mouse_exited"]
[connection signal="input_event" from="MarginContainer4/Player6" to="." method="_on_Player6_input_event"]
[connection signal="mouse_entered" from="MarginContainer4/Player6" to="." method="_on_Player6_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer4/Player6" to="." method="_on_Player6_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
